# ChatServer

./: CMakeLists.txt  README.md  autobuild.sh
docker/: Dockerfile  docker-compose.yml  nginx.conf
include/: public.hpp
include/server/: ChatServer.hpp  ChatService.hpp
include/server/db/: db.hpp
include/server/model/: FriendModel.hpp  Group.hpp  GroupModel.hpp  GroupUser.hpp  OfflineMessageModel.hpp  User.hpp  UserModel.hpp
src/client/: CMakeLists.txt  client.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp
src/server/db/: db.cpp
src/server/model/: FriendModel.cpp  GroupModel.cpp  OfflineMessageModel.cpp  UserModle.cpp  main.cpp
src/server/redis/: redis.cpp
